--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dependencies": {
         "@inertiajs/react": "^2.3.15",
         "react": "^19.2.4",
-        "react-dom": "^19.2.4"
+        "react-dom": "^19.2.4",
+        "react-hot-toast": "^2.6.0"
     },
     "name": "fortress-system",
     "version": "1.0.0",
